--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 											<tr>
 												<td valign="top" width="220">
 													<a href="http://15kmdebouskoura.ma/" target="_blank"><img alt=
-													"Dossards" border="0" height="147" src="./15Km/2.jpg"
+													"Dossard" border="0" height="147" src="./15Km/2.jpg"
 													style="display:block" width="220"></a>
 												</td>
 
@@ -309,7 +309,7 @@
 											<tr>
 												<td valign="top" width="220">
 													<a href="http://15kmdebouskoura.ma/" target="_blank"><img alt=
-													"VILLAGE" border="0" height="146" src="./15Km/3.jpg" style=
+													"Départ" border="0" height="146" src="./15Km/3.jpg" style=
 													"display:block" width="220"></a>
 												</td>
 
@@ -599,7 +599,7 @@
 														<tr>
 															<td valign="top" width="220">
 																<a href="https://web.facebook.com/PlanetSport.ma/" target=
-																"_blank"><img alt="" border="0" height="151" src=
+																"_blank"><img alt="Planet Sport" border="0" height="151" src=
 																"./15Km/PS.jpg" style="display:block" width="220"></a>
 															</td>
 
