--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <td valign="top">
                           <a href="http://15kmdebouskoura.ma/" target=
                           "_blank"><img alt="Suis le guide !" border="0"
-                          height="200" src="./15Km/1.jpg" style="display:block"
+                          height="200" src="./15Km/5.jpg" style="display:block"
                           width="300"></a>
                         </td>
                         <td width="30"><img alt="" height="1" src=
@@ -562,7 +562,7 @@
                                 <a href=
                                 "https://web.facebook.com/PlanetSport.ma/"
                                 target="_blank"><img alt="Planet Sport" border=
-                                "0" height="140" src="./15Km/PS.jpg" style=
+                                "0" height="140" src="./15Km/6.jpg" style=
                                 "display:block" width="220"></a>
                               </td>
                               <td valign="top" width="30">
