--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                   incontournable avant la course !<br>
                                   Pour <strong>retirer ton dossard</strong>
                                   évidemment, mais surtout pour que tu puisses
-                                  profiter d'une exposition dédié au sport et à
+                                  profiter d'une exposition dédiée au sport et à
                                   ta santé.<br>
                                   <p style=
                                   "font-size: 18px; color: #FF5500; font-weight:bold; height: 10px">
