--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 <td align="center" bgcolor="#E6E6E6" style=
                 "font-family: Arial, Helvetica, sans-serif; font-size:10px; color: #000000;">
                   <strong><br>
-                  15 Km de Bouskoura, le guide pratique: plus que
-                  quelques jours avant le grand départ ! Rendez-vous le 19 Mars !</strong><br>
+                  15 Km de Bouskoura, le guide pratique: plus qu'une semaine avant le grand départ ! Rendez-vous le 19 Mars !</strong><br>
                   Si vous ne visualisez pas ce message, <a href=
                   "http://15kmdebouskoura.ma/" style="color: #FF5500;" target=
                   "_blank">cliquez ici</a>.<br>
@@ -94,8 +93,7 @@
                                 <td style=
                                 "font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; text-align:justify;"
                                 valign="top"><br>
-                                Ça y est, tu n'es plus qu'à <strong>quelques
-                                jours du départ&nbsp;!</strong> Tu te poses
+                                Ça y est, tu n'es plus qu'à <strong>une semaine du départ&nbsp;!</strong> Tu te poses
                                 encore beaucoup de questions&nbsp;? Où nous
                                 retrouver le jour de la course ? À quelle
                                 heure&nbsp;? Et où croiser la dizaine de
