--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <td align="center" bgcolor="#E6E6E6" style=
                 "font-family: Arial, Helvetica, sans-serif; font-size:10px; color: #000000;">
                   <strong><br>
-                  15 Km de Bouskoura, le guide pratique: plus qu'à une semaine avant le grand départ ! Rendez-vous le 19 Mars !</strong><br>
+                  15 Km de Bouskoura, le guide pratique: plus qu'une semaine avant le grand départ ! Rendez-vous le 19 Mars !</strong><br>
                   Si vous ne visualisez pas ce message, <a href=
                   "http://15kmdebouskoura.ma/" style="color: #FF5500;" target=
                   "_blank">cliquez ici</a>.<br>
